add random class.

--- a/config/parallel_config.ini
+++ b/config/parallel_config.ini
@@ -14,6 +14,7 @@ packetFlits=5;
 totalChannelNum=87;
 procNum=4;
 partitionNum=4;
+randomStyle=uniform;
 Router[0..3].partition-id=0;
 Core[0..7].partition-id=0;
 Router[4..7].partition-id=1;
