--- a/config/serial_config.ini
+++ b/config/serial_config.ini
@@ -12,4 +12,5 @@ coreGateNum=1;
 readNedStyle="line_by_line"; # "line_by_line" or "one_off_reading"
 packetFlits=5;
 totalChannelNum=87;
+randomStyle=uniform;
 [config clientServerNet]
